src/test/error/class11.lns
class Test {
   let val;int;
}
